# SourcePacker

./: .gitignore  Agents.md  Cargo.toml  LICENSE  Readme.md  app.manifest  app.rc  build.rs  temp_patch.txt  temp_with_lines.txt
.github/workflows/: rust.yml
doc/: DependencyInversionForAppEvents.md  DesignArchitecture.md  DevelopmentPlan.md  GrokSuggestions.md  ImproveTestingHandle.md  MockRefactor.md  PLan.MainDevelopment.md  Plan.CommanDuctUI.md  Plan.ContentSearch.md  Plan.FixEncapsulation.md  Plan.Gpt-5.md  Plan.KeepWin32OutOfLinuxBuild.md  Plan.MvpSeparation.md  Plan.PreViewPane.md  Plan.Profile_exclude_pattern.md  Plan.ProjectLocalConfig.md  Plan.RefactorMenuActions.md  Plan.RefactorProjectContext.md  Plan.StyleGuides.md  Plan.TheestateCHeckbox.md  Plan.ThreestateCheckbox.md  Plan.TokenCounting.md  Plan.UIDescriptiveLayer.md  Plan.placeholders.md  PlanUIDescriptiveLayer.md  Requirements.md  UserRequirements.md
src/: app_logic.rs  core.rs  main.rs  platform_layer.rs  ui_description_layer.rs
src/app_logic/: handler.rs  handler_tests.rs  main_window_ui_state.rs  mod.rs  ui_constants.rs
src/core/: app_session_data.rs  archiver.rs  checksum_utils.rs  config.rs  content_search_progress.rs  file_node.rs  file_system.rs  mod.rs  models.rs  node_state_applicator.rs  path_utils.rs  profile_runtime_data.rs  profiles.rs  project_context.rs  state_manager.rs  token_progress.rs  tokenizer_utils.rs
src/platform_layer/: app.rs  command_executor.rs  command_executor_tests.rs  control_treeview.rs  controls.rs  dialog_handler.rs  error.rs  mod.rs  styling.rs  styling_primitives.rs  styling_stub.rs  styling_windows.rs  types.rs  window_common.rs
src/platform_layer/controls/: button_handler.rs  dialog_handler.rs  input_handler.rs  label_handler.rs  menu_handler.rs  panel_handler.rs  styling_handler.rs  treeview_handler.rs
src/ui_description_layer/: mod.rs  theme.rs
src/ui_facade/: app.rs  error.rs  mod.rs  window.rs
