[package]
name = "source_packer"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4"
directories = "6.0.0"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
windows = { version = "0.61.1", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Controls_Dialogs", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_System_WindowsProgramming", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_Storage_FileSystem", "Win32_UI_Shell"] }
log = "0.4"
simplelog = "0.12.2"
tiktoken-rs = "0.7.0"
time = "0.3.41"

[dev-dependencies]
tempfile = "3.20.0"
rand = "0.9.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 1
incremental = false

[build-dependencies]
embed-resource = "3.0.3"
