[package]
name = "source_packer"
version = "0.1.0"
edition = "2024"

# These are your cross-platform dependencies.
# They will be included in all builds (Windows, Linux, etc.).
[dependencies]
ignore = "0.4"
directories = "6.0.0"
glob = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
log = "0.4"
simplelog = "0.12.2"
tiktoken-rs = "0.7.0"
time = "0.3.41"
sha2 = "0.10.8" # Version was updated slightly to match latest, but 0.10.9 is also fine.

[dev-dependencies]
tempfile = "3.20.0"
rand = "0.9.1"

# These dependencies are ONLY included when compiling for Windows.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [ # I've updated to the version in your log, but 0.61.1 is also fine if your lock file uses it.
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]}

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256 # Setting this to a higher number can improve dev build times
incremental = true  # 'false' is unusual for dev, 'true' is the default and faster

# The build dependency for embedding resources is also Windows-specific.
[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.3"
