[package]
name = "source_packer"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".", # The root package (source_packer) is a member
    "src/CommanDuctUI",
]

# These are your cross-platform dependencies.
# They will be included in all builds (Windows, Linux, etc.).
[dependencies]
ignore = "0.4.23"
directories = "6.0.0"
glob = "0.3.3"
commanductui = { path = "src/CommanDuctUI" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
log = "0.4.28"
simplelog = "0.12.2"
tiktoken-rs = "0.7.0"
time = "0.3.44"
sha2 = "0.10.8"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.23.0"
rand = "0.9.2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256 # Setting this to a higher number can improve dev build times
incremental = true  # 'false' is unusual for dev, 'true' is the default and faster

# The build dependency for embedding resources is also Windows-specific.
[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.3"
